Update messages to use translations

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -44,7 +44,7 @@ Language=Sprache
 mapping=ElasticSearch Mapping
 MassDownloadProjectCreationError=Der Projektordner {0} kann nicht erstellt werden.
 massImport=Massenimport
-MetadataDigitalDocumentError=DigitalDocument Fehler bei\:
+MetadataDigitalDocumentError=DigitalDocument Fehler bei\: {0}
 MetadataDoesNotEndWith=endet nicht mit dem Wert
 MetadataDoesNotStartWith=startet nicht mit dem Wert
 MetadataInvalidData=Ung\u00FCltige Eingaben\:
@@ -57,7 +57,7 @@ MetadataPaginationError=Verifizierung nicht erfolgreich, keine Seiten zugewiesen
 MetadataPaginationPages=Seite ohne Strukturelemente\:
 MetadataPaginationStructure=Strukturelement ohne Seiten\:
 MetadataPersonWithoutRole=Person ohne Rolle
-MetadataReadError=XML Lesefehler bei\:
+MetadataReadError=XML Lesefehler bei\: {0}
 MetadataTimeout=Die Metadaten wurden von Ihnen 30 min nicht bearbeitet und wurden daher wieder f\u00FCr andere Benutzer freigegeben. Sie befinden sich gerade in Arbeit.
 MetadataTimes=mal
 MetadataToManyElements=darf nur einmal vorhanden sein, existiert aber
@@ -343,7 +343,9 @@ errorCreating=Fehler beim Erzeugen einer neuen Instanz vom Typ ''{0}''
 errorDatabaseReading=Fehler beim Datenbanklesen von ''{0}'' with ID {1}.
 errorDeleting=Fehler beim L\u00F6schen von ''{0}''
 errorDirectoryDeleting=Fehler beim L\u00F6schen von ''{0}'' Verzeichnis.
+errorDownloading=Fehler beim Herunterladen von ''{0}''
 errorExporting=Fehler beim Exportieren von ''{0}'' mit ID {1}
+errorImporting=Fehler beim Importieren von ''{0}'' mit ID {1}
 errorLoadingMany=Fehler beim Laden von ''{0}''
 errorLoadingOne=Fehler beim Laden von ''{0}'' mit ID {1}
 errorParsingFile=Parsingfehler: verschiedene {0} in der Datei ('{1}' & '{2}').
@@ -353,6 +355,7 @@ errorReloading=Fehler beim Aktualisieren von ''{0}''
 errorRenaming=Fehler beim Umbenennen von {0}
 errorSaving=Fehler beim Speichern von ''{0}''
 errorTracking=Fehlertracking
+errorUploading=Fehler beim Hochladen von ''{0}''
 errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
