--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -44,7 +44,7 @@ Language=Language
 mapping=ElasticSearch mapping
 MassDownloadProjectCreationError=The project folder {0} could not be created.
 massImport=mass import
-MetadataDigitalDocumentError=DigitalDocument error at\:
+MetadataDigitalDocumentError=DigitalDocument error at\: {0}
 MetadataDoesNotEndWith=not end with the value
 # MetadataDoesNotStartWith is used in MetadataValidationService - line 523
 MetadataDoesNotStartWith=not start with the value
@@ -58,7 +58,7 @@ MetadataPaginationError=verification not successful, no pages assigned
 MetadataPaginationPages=page without structural element\:
 MetadataPaginationStructure=structural element without pages\:
 MetadataPersonWithoutRole=person without role
-MetadataReadError=XML read error at\:
+MetadataReadError=XML read error at\: {0}
 MetadataTimeout=The metadata has not edited by you for 30 minutes and were therefore released for other users. They are currently worked on.
 MetadataTimes=times
 MetadataToManyElements=may exist only once, but exists
@@ -341,7 +341,9 @@ errorCreating=Error creating new ''{0}''
 errorDatabaseReading=Error on reading database for ''{0}'' with ID {1}.
 errorDeleting=Error deleting ''{0}''
 errorDirectoryDeleting=''{0}'' directory could not be deleted.
+errorDownloading=Error downloading ''{0}''
 errorExporting=Error exporting ''{0}'' with ID {1}
+errorImporting=Error importing ''{0}'' with ID {1}
 errorLoadingMany=Error loading ''{0}''
 errorLoadingOne=Error loading ''{0}'' with ID {1}
 errorParsingFile=Error parsing: various {0} in the file ('{1}' & '{2}').
@@ -351,6 +353,7 @@ errorReloading=Error reloading ''{0}''
 errorRenaming=Error renaming {0}
 errorSaving=Error saving ''{0}''
 errorTracking=Error tracking
+errorUploading=Error uploading ''{0}''
 errorProjectNoTitleGiven=No project title was given. You cannot save a project without a title.
 erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
