secured user group edit page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -829,6 +829,7 @@ userEdit=Benutzer bearbeiten
 userAdd=Benutzer hinzuf\u00FCgen
 userGroup=Benutzergruppe
 userGroupEdit=Benutzergruppe bearbeiten
+userGroupView=Benutzergruppe anzeigen
 userGroups=Benutzergruppen
 userGroupsAdd=Benutzergruppen hinzuf\u00FCgen
 userConfiguration=Benutzerkonfiguration
