--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -826,6 +826,7 @@ userEdit=Edit user
 userAdd=Add user
 userGroup=User group
 userGroupEdit=Edit user group
+userGroupView=View user group
 userGroups=User groups
 userGroupsAdd=Add user groups
 userConfiguration=User configuration
