Add project to user

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -83,6 +83,7 @@ abgeschlosseneTasksAusListeEntfernen=Abgeschlossene Aufgaben l\u00F6schen
 addDemoTask=Beispielaufgabe hinzuf\u00FCgen
 addFilter=Filter hinzuf\u00FCgen
 addNewMetadataGroup=Neue Metadatengruppe hinzuf\u00FCgen
+addProjects=Projekte hinzuf\u00FCgen
 addTemplateProperty=Vorlageneigenschaft hinzuf\u00FCgen
 addWorkpieceProperty=Werkst\u00FCckeigenschaft hinzuf\u00FCgen
 addToBatch=Vorgang wurde zur Gruppe {0} hinzugef\u00FCgt.
@@ -276,6 +277,7 @@ days=Tage
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
 deleteIndex=ElasticSearch Index l\u00F6schen
+deleteFromProject=Benutzer aus der Projekt l\u00F6schen
 deleteTask=Aufgabe l\u00F6schen
 dennochEinloggen=Dennoch einloggen
 details=Details
