--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -84,6 +84,7 @@ abgeschlosseneTasksAusListeEntfernen=Remove finished tasks
 addDemoTask=Add sample task
 addFilter=Add new filter to list
 addNewMetadataGroup=Add new metadata group
+addProjects=Add projects
 addTemplateProperty=Add template property
 addWorkpieceProperty=Add workpiece property
 addToBatch=Added process to batch {0}.
@@ -274,6 +275,7 @@ days=days
 deleteAfterMove=Delete after export
 deleteBatch=delete the selected batch
 deleteIndex=Delete ElasticSearch index
+deleteFromProject=Delete user from project
 deleteTask=Delete task
 dennochEinloggen=Log in anyway
 details=Details
